`Updated package-lock.json and package.json to include @mui dependencies`

--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@mui/icons-material": "^7.3.6",
+    "@mui/material": "^7.3.6",
     "@redux-devtools/extension": "^3.3.0",
     "@reduxjs/toolkit": "^2.11.2",
     "lucide-react": "^0.562.0",
