--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-hook-form": "^7.69.0",
-    "react-redux": "^9.2.0"
+    "react-redux": "^9.2.0",
+    "react-select": "^5.10.2"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.18",
